# kuka_experimental

./: .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: README.md  ci-ros-lint.yml  ci_bionic.yml  ci_focal.yml  foxy-binary-build-main.yml  foxy-binary-build-testing.yml  foxy-semi-binary-build-main.yml  foxy-semi-binary-build-testing.yml  foxy-source-build.yml  reusable-ros-tooling-source-build.yml  rolling-abi-compatibility.yml  rolling-binary-build-main.yml  rolling-binary-build-testing.yml  rolling-semi-binary-build-main.yml  rolling-semi-binary-build-testing.yml  rolling-source-build.yml
kuka_experimental/: CMakeLists.txt  package.xml
kuka_kr10_support/: CMakeLists.txt  package.xml
kuka_kr10_support/launch/: test_kr10r1100sixx.launch.py  test_kr10r1420.launch.py  test_kr10r900_2.launch.py  test_ros2_control_kr10r1100sixx.launch.py  test_ros2_control_kr10r1420.launch.py  test_ros2_control_kr10r900_2.launch.py
kuka_kr10_support/urdf/: kr10r1100sixx.xacro  kr10r1100sixx_macro.xacro  kr10r1420.xacro  kr10r1420_macro.xacro  kr10r900_2.xacro  kr10r900_2_macro.xacro
kuka_kr120_support/: CMakeLists.txt  package.xml
kuka_kr120_support/launch/: test_kr120r2500pro.launch.py  test_ros2_control_kr120r2500pro.launch.py
kuka_kr120_support/urdf/: kr120r2500pro.xacro  kr120r2500pro_macro.xacro
kuka_kr150_support/: CMakeLists.txt  package.xml
kuka_kr150_support/launch/: test_kr150_2.launch.py  test_kr150r3100_2.launch.py  test_ros2_control_kr150_2.launch.py  test_ros2_control_kr150r3100_2.launch.py
kuka_kr150_support/urdf/: kr150_2.xacro  kr150_2_macro.xacro  kr150r3100_2.xacro  kr150r3100_2_macro.xacro
kuka_kr16_support/: CMakeLists.txt  package.xml
kuka_kr16_support/launch/: test_kr16_2.launch.py  test_ros2_control_kr16_2.launch.py
kuka_kr16_support/urdf/: kr16_2.xacro  kr16_2_macro.xacro
kuka_kr210_support/: CMakeLists.txt  package.xml
kuka_kr210_support/launch/: test_kr210l150.launch.py  test_kr210r2700.launch.py  test_ros2_control_kr210l150.launch.py  test_ros2_control_kr210r2700.launch.py
kuka_kr210_support/meshes/kr210r2700/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
kuka_kr210_support/meshes/kr210r2700/visual/: base_link.stl  link_2.stl  link_4.stl  link_5.stl  link_6.stl
kuka_kr210_support/urdf/: kr210l150.urdf  kr210l150.xacro  kr210l150_macro.ros2_control.xacro  kr210l150_macro.xacro  kr210r2700.xacro  kr210r2700_.urdf  kr210r2700_macro.ros2_control.xacro  kr210r2700_macro.xacro
kuka_kr3_support/: CMakeLists.txt  package.xml
kuka_kr3_support/launch/: test_kr3r540.launch.py  test_ros2_control_kr3r540.launch.py
kuka_kr3_support/urdf/: kr3r540.xacro  kr3r540_macro.xacro
kuka_kr5_support/: CMakeLists.txt  package.xml
kuka_kr5_support/launch/: test_kr5_arc.launch.py  test_ros2_control_kr5_arc.launch.py
kuka_kr5_support/test/: roslaunch_test.xml
kuka_kr5_support/urdf/: kr5_arc.xacro  kr5_arc_macro.xacro
kuka_kr6_support/: CMakeLists.txt  package.xml
kuka_kr6_support/launch/: test_kr6r700sixx.launch.py  test_kr6r900_2.launch.py  test_kr6r900sixx.launch.py  test_ros2_control_kr6r700sixx.launch.py  test_ros2_control_kr6r900_2.launch.py  test_ros2_control_kr6r900sixx.launch.py
kuka_kr6_support/urdf/: kr6r700sixx.xacro  kr6r700sixx_macro.xacro  kr6r900_2.xacro  kr6r900_2_macro.xacro  kr6r900sixx.xacro  kr6r900sixx_macro.xacro
kuka_lbr_iiwa_support/: CMakeLists.txt  package.xml
kuka_lbr_iiwa_support/config/: kuka_7dof_controllers.yaml
kuka_lbr_iiwa_support/launch/: test_lbr_iiwa_14_r820.launch.py  test_ros2_control_lbr_iiwa_14_r820.launch.py
kuka_lbr_iiwa_support/urdf/: kuka_lbr_iiwa_macro.ros2_control.xacro  lbr_iiwa_14_r820.xacro  lbr_iiwa_14_r820_macro.xacro
kuka_resources/: CMakeLists.txt  package.xml
kuka_resources/config/: kuka_6dof_controllers.yaml  view_robot.rviz
kuka_resources/launch/: test_kuka.launch.py  test_ros2_control_kuka.launch.py
kuka_resources/urdf/: common_macro.ros2_control.xacro  common_properties.xacro
kuka_rsi_hw_interface/: package.xml
kuka_rsi_simulator/: package.xml  setup.py
kuka_rsi_simulator/scripts/: kuka_rsi_simulator
